0.68beta5
- BUG: reader_rrd3 default timestamp was 0, return to
seconds from midnight of current day.

0.68beta4
- SOPORTE: reader_rrd3 exports cat1, 48, 19 & 20 delays.
- SOPORTE: added source ip address to gps timestamp field.
- SOPORTE: reader_rrd3 exports bds3.0 to database.
- SOPORTE: reader_rr33 exports bds & delays to database.

0.68beta3
- SOPORTE: reader_rrd3 comienza a volcar en bbdd en el
minuto 00, y acaba en el ultimo minuto multiplo de 5. una
grabación que va de 00:00 a 04:03, vuelca datos desde
00:00 hasta 03:55. Como no ha llegado a 04:05, no se
vuelcan los correspondientes de 04:00 a 04:05, que irían en 04:00.

0.68beta2
- SOPORTE: delays in category 20 are now exported, in
both client & client_time.
- BUG: Si no había filtro seleccionado, se filtraban todos
los blancos de categoría 34/48!!
- BUG: Only send complete blocks from reader_rrd3 to db,
unless requested to do so (update_last=1).

0.68beta1
- SOPORTE: filtersacsic, to filter gps files by sac/sic.
- SOPORTE: joingps, to mix two gps files sorting by gps
timestamp.

PENDIENTE DE RESOLVER, PERO NOTIFICADO
- BUG: En  solaris no debería haber asterix_versions. Sin
embargo, si no existe en el fichero de configuración, la
aplicación no arranca. Si existe, la aplicación funciona
(no se comprueba nada mas).

0.67
- SOPORTE: asterix_versions implemented as an array.
- SOPORTE: Ya se puede generar de un fichero GPS->GPS,
AST->AST y GPS->AST. Esto permite a los filtros trabajar
sobre ficheros ast y sobre ficheros gps.

0.66
- SOPORTE: Creación de filtro de blancos en tierra. Se usará
en reader_network con file como origen.
- BUG: Corregido el script de compilación (build.sh) para que
vuelva a funcionar en Solaris.

0.65
- SOPORTE: Added asterix_versions to allow runonce.
- SOPORTE: Now dest_ftp_uri is an array, so dest_file could be
uploaded several times to different hosts.
- BUG: If no dest_file_region is specified, don't insert text
in the destination filename.

0.64